# College-Event-Portal

./: .replit  README.md  pyproject.toml
app server/event-portal/: .env  app.py  extensions.py  migrate.py  migrate2.py  models.py
app server/event-portal/routes/: admin.py  auth.py  events.py  user.py
app server/event-portal/services/: email_service.py
app server/event-portal/templates/: base.html  landing.html
app server/event-portal/templates/admin/: analytics.html  approvals.html  event_form.html  events_list.html  queries.html  results_manage.html
app server/event-portal/templates/auth/: forgot_password.html  login.html  profile.html  register.html  reset_password.html  verify_otp.html
app server/event-portal/templates/events/: detail.html  list.html
app server/event-portal/templates/user/: my_events.html  portal.html  propose.html
artifacts/event-portal/: analytical_queries.sql  analytics_pipeline.py  app.py  index.html  models.py
artifacts/event-portal/.replit-artifact/: artifact.toml
artifacts/event-portal/routes/: admin.py  analytics.py  auth.py  events.py  results.py  user.py
artifacts/event-portal/services/: email_service.py
artifacts/event-portal/templates/: base.html  landing.html
artifacts/event-portal/templates/admin/: event_form.html  portal.html  results_index.html
attached_assets/: Pasted-Act-as-an-expert-Full-Stack-Python-Web-Developer-and-Da_1777023718471.txt  Pasted-Act-as-an-expert-Full-Stack-Python-Web-Developer-and-Da_1777023909005.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycop_1777024769814.txt
(+8 files in other folders)
